--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,3 +1,4 @@
+@import './components/button.scss';
 @import './components/colors.scss';
 
 @font-face {
@@ -7,4 +8,12 @@
 
 html {
   font-family: Lato;
+}
+
+.container-ui {
+  margin: 0 15% !important
+}
+
+.text-center {
+  text-align: center;
 }
