update/ adding home page

--- a/src/assets/css/components/button.scss
+++ b/src/assets/css/components/button.scss
@@ -4,8 +4,8 @@
   padding: 10px 40px;
   background: $primary;
   border-radius: 3px;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, .2);
+  box-shadow: 2px 2px 5px 0.1px rgba(255, 255, 255);
   text-transform: uppercase;
   font-weight: bold;
-
+  color: #000;
 }
