update/ auth muckup ready

--- a/src/assets/css/components/colors.scss
+++ b/src/assets/css/components/colors.scss
@@ -1,6 +1,7 @@
 $primary: #95CA3E;
-$secondary: #1C2D56;
+$secondary: #002B53;
 $tertiary: #003566;
+$clear-text: #4778a5;
 
 $colors: ("primary": $primary,
   "secondary": $secondary,
