--- a/src/assets/css/components/button.scss
+++ b/src/assets/css/components/button.scss
@@ -7,5 +7,16 @@
   box-shadow: 0 1px 5px rgba(0, 0, 0, .2);
   text-transform: uppercase;
   font-weight: bold;
+  color: #333;
+  margin-top: 10px;
+}
 
+.button--clear {
+  padding: 10px 40px;
+  background: none;
+  border-radius: 3px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: white;
+  margin-top: 10px;
 }
