--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,5 +1,9 @@
-@import './components/button.scss';
 @import './components/colors.scss';
+
+@import './components/button.scss';
+@import './components/card.scss';
+@import './components/input.scss';
+
 
 @font-face {
   font-family: Lato;
@@ -11,7 +15,17 @@ html {
 }
 
 .container-ui {
-  margin: 0 15% !important
+  margin: 0 15% !important;
+  padding-top: 5%;
+}
+
+@media (max-width: 600px) {
+
+  .container-ui {
+    margin: 0 5% !important;
+    padding-top: 5%;
+  }
+
 }
 
 .text-center {
@@ -20,4 +34,9 @@ html {
 
 .page {
   min-height: 100vh;
+}
+
+a {
+  color: white;
+  text-decoration: white
 }
