--- a/src/assets/css/components/fab.scss
+++ b/src/assets/css/components/fab.scss
@@ -1,5 +1,12 @@
+@import './colors.scss';
+
 .fab {
   position: fixed;
   bottom: 10px;
   right: 10px;
+  padding: 12px 25px;
+  font-size: 40px;
+  background: $primary;
+  border-radius: 50px;
+  cursor: pointer;
 }
