--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -3,6 +3,7 @@
 @import './components/button.scss';
 @import './components/card.scss';
 @import './components/input.scss';
+@import './components/fab.scss';
 
 
 @font-face {
