--- a/src/assets/css/components/card.scss
+++ b/src/assets/css/components/card.scss
@@ -4,5 +4,6 @@
   background: $tertiary;
   color: white;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
-  padding: 10px
+  padding: 10px;
+  border-radius: 10px
 }
