--- a/src/assets/css/components/input.scss
+++ b/src/assets/css/components/input.scss
@@ -8,7 +8,7 @@
   border-radius: 5px;
   color: white;
   box-sizing: border-box;
-  width: 90%;
+  width: 100% !important;
   margin-top: 10px
 }
 
