--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -4,6 +4,7 @@
 @import './components/card.scss';
 @import './components/input.scss';
 @import './components/fab.scss';
+@import './components/table.scss';
 
 
 @font-face {
