--- a/src/assets/css/components/button.scss
+++ b/src/assets/css/components/button.scss
@@ -4,7 +4,7 @@
   padding: 10px 40px;
   background: $primary;
   border-radius: 3px;
-  box-shadow: 0px 1px 5px rgba(0, 0, 0, .2);
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
   text-transform: uppercase;
   font-weight: bold;
   color: #000;
@@ -19,4 +19,5 @@
   background: none;
   color: white;
   box-shadow: none;
+  border: 0.1px solid;
 }
