update/ aside ready

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -42,3 +42,12 @@ a {
   color: white;
   text-decoration: white
 }
+
+
+.inline-block {
+  display: inline-block !important;
+}
+
+.padding-1 {
+  padding: 1rem
+}
